--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -469,12 +469,16 @@ $color-border-light: #DDDDDD;
 /* SUBMIT page */
 
 .preprint-submit-header {
-    padding-top: 90px;
+    padding-top: 70px;
     background: url("img/submit_bg.jpg") no-repeat top center;
     background-size: cover;
     background-position-y: -50px;
     border-bottom: 1px solid #eee;
     height: 200px;
+    a {
+        color: white;
+        text-decoration: underline;
+    }
 }
 .preprint-submit-body {
     background-color: #f8f8f8;
