--- a/app/templates/submit.hbs
+++ b/app/templates/submit.hbs
@@ -3,6 +3,10 @@
 <div class="preprint-submit-header">
     <div class="container">
         <div class="row">
+            <div class="col-xs-12 col-md-10 col-md-offset-1 ">
+                <i class="fa fa-long-arrow-left" aria-hidden="true"></i>
+                <a {{action 'returnToSubmission'}}>{{t "submit.body.edit.return_button" documentType=currentProvider.documentType}}</a>
+            </div>
             <div class="col-xs-12 text-center">
                 <h1>{{t (if editMode "submit.edit_heading" heading) documentType=currentProvider.documentType}}</h1>
             </div>
@@ -296,9 +300,6 @@
                                     }}
                                 </div>
                             {{/if}}
-                            <button class="btn btn-primary btn-md m-t-md pull-right" disabled={{unless allSectionsValid true}} {{action 'returnToSubmission'}}>
-                                {{t "submit.body.edit.return_button" documentType=currentProvider.documentType}}
-                            </button>
                         </div>
                     {{else}}
                         {{#if moderationType}}
