add contributor withdrawal page

--- a/app/templates/content/index.hbs
+++ b/app/templates/content/index.hbs
@@ -32,7 +32,7 @@
                     </h6>
                 </div>
                 <div class="col-xs-12 col-sm-2 edit-button-and-logo text-center">
-                    {{#if isAdmin}}
+                    {{#if (and isAdmin (not isPendingWithdrawal))}}
                         {{! TODO This link will need to be updated for phase 2 of branding }}
                         <a type="button"
                            class="btn btn-success edit-btn"
@@ -51,7 +51,7 @@
     </div>
     {{!END HEADER ROW}}
     {{#if showStatusBanner}}
-        {{preprint-status-banner submission=model}}
+        {{preprint-status-banner submission=model isPendingWithdrawal=isPendingWithdrawal}}
     {{/if}}
     {{!CONTAINER DIV}}
     <div id="view-page" class="container">
