--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -820,6 +820,25 @@ hr {
     }
 }
 
+.preprint-form-section-withdraw-comment {
+    header {
+        font: {
+            size: 16px;
+            font-weight: bold;
+        }
+        color: #337AB7;
+        display: block;
+        margin: 1rem 0;
+    }
+    label > input, label > textarea {
+        font-weight: normal;
+    }
+    textarea {
+        resize: none;
+        height: 150px;
+    }
+}
+
 
 
 #preprint-form-basics {
