--- a/app/templates/submit.hbs
+++ b/app/templates/submit.hbs
@@ -4,8 +4,10 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-md-10 col-md-offset-1 ">
-                <i class="fa fa-long-arrow-left" aria-hidden="true"></i>
-                <a {{action 'returnToSubmission'}}>{{t "submit.body.edit.return_button" documentType=currentProvider.documentType}}</a>
+                {{#if editMode}}
+                    {{fa-icon 'long-arrow-left'}}
+                    <a {{action 'returnToSubmission'}}>{{t "submit.body.edit.return_button" documentType=currentProvider.documentType}}</a>
+                {{/if}}
             </div>
             <div class="col-xs-12 text-center">
                 <h1>{{t (if editMode "submit.edit_heading" heading) documentType=currentProvider.documentType}}</h1>
@@ -300,6 +302,7 @@
                                     }}
                                 </div>
                             {{/if}}
+                            <button class="btn {{if canResubmit 'btn-default' 'btn-danger'}} btn-md m-t-md pull-right" {{action 'clickWithdraw'}}> {{t "submit.body.edit.withdraw_button" documentType=currentProvider.documentType}} </button>
                         </div>
                     {{else}}
                         {{#if moderationType}}
