Fix background-image css on edit/submit/withdraw pages

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -481,7 +481,7 @@ $color-border-light: #DDDDDD;
 
 .preprint-submit-header {
     padding-top: 70px;
-    background: url("img/submit_bg.jpg") no-repeat top center;
+    background: url("img/submit_bg.jpg") top center;
     background-size: cover;
     background-position-y: -50px;
     border-bottom: 1px solid #eee;
