--- a/app/templates/submit.hbs
+++ b/app/templates/submit.hbs
@@ -250,11 +250,53 @@
                     {{/with}}
 
                     {{! ==== COI HERE ==== }}
-                    {{!-- Add logic for COI here --}}
-                    {{!-- No: Disabled Textbox with placeholder
-                        Yes: Required textarea to describe
-                    --}}
-                    {{!-- Section explaining COI here --}}
+                    {{#with _names.[6] as |name|}}
+                        {{#preprint-form-section id="author-coi-assertion" editMode=editMode name=name allowOpen=true canEdit=canEdit errorAction=(action 'error') as |hasOpened|}}
+                            {{preprint-form-header editMode=editMode node=node name=name valid=true isValidationActive=hasOpened}}
+                            {{#preprint-form-body}}
+                                <div role='radiogroup'>
+                                    <input
+                                        type="radio"
+                                        id="coiYes"
+                                        name="coi"
+                                        value="Yes"
+                                        onchange={{action "updateCoi" true}}
+                                        checked={{hasCoi}}
+                                    >
+                                    <label class='coiRadioLabel' for="coiyes">{{t "submit.body.general.yes"}}</label>
+                                    <input
+                                        type="radio"
+                                        id="coiNo"
+                                        name="coi"
+                                        value="No"
+                                        onchange={{action "updateCoi" false}}
+                                        checked={{if (and (not hasCoi) not-eq hasCoi undefined) true}}
+                                    >
+                                    <label class='coiRadioLabel' for="coiNo">{{t "submit.body.general.no"}}</label>
+                                </div>
+                                <br>
+                                {{#if hasCoi}}
+                                    <label for='coiStatement'>Describe: <span class='required' /></label>
+                                    {{validated-input id='coiStatement' inputType='textarea' model=model valuePath='conflictOfInterestStatement' documentType=currentProvider.documentType value=model.conflictOfInterestStatement}}
+                                {{else if (and (not hasCoi) (not-eq hasCoi undefined))}}
+                                    <div class='form-group'>
+                                        <input type="text" class='form-control' disabled={{true}} placeholder={{t "submit.body.conflict_of_interest.placeholder"}}>
+                                    </div>
+                                {{/if}}
+                                <div class="assertionDescription">
+                                    {{t "submit.body.conflict_of_interest.description" documentType=currentProvider.documentType}}
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="pull-right">
+                                            <button {{action 'discardBasics'}} class="btn btn-default" disabled={{unless basicsChanged true}} >{{t "global.discard"}}</button>
+                                            <button {{action 'saveBasics'}} class="btn btn-primary" disabled={{unless basicsValid true}} >{{t "submit.body.save_continue"}}</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            {{/preprint-form-body}}
+                        {{/preprint-form-section}}
+                    {{/with}}
 
                     {{#with _names.[7] as |name|}}
                         {{#preprint-form-section id="supplemental-materials" editMode=editMode class="preprint-form-upload" name=name allowOpen=uploadValid canEdit=canEdit errorAction=(action 'error') as |hasOpened|}}
