Update to have translations work, update computeds, add coiValid checks

--- a/app/templates/submit.hbs
+++ b/app/templates/submit.hbs
@@ -251,8 +251,8 @@
 
                     {{! ==== COI HERE ==== }}
                     {{#with _names.[6] as |name|}}
-                        {{#preprint-form-section id="author-coi-assertion" editMode=editMode name=name allowOpen=true canEdit=canEdit errorAction=(action 'error') as |hasOpened|}}
-                            {{preprint-form-header editMode=editMode node=node name=name valid=coiStatementValid isValidationActive=hasOpened}}
+                        {{#preprint-form-section id="author-coi-assertion" editMode=editMode name=name allowOpen=uploadValid canEdit=canEdit errorAction=(action 'error') as |hasOpened|}}
+                            {{preprint-form-header editMode=editMode node=node name=name valid=coiValid isValidationActive=hasOpened}}
                             {{#preprint-form-body}}
                                 <div role='radiogroup'>
                                     <input
@@ -263,16 +263,16 @@
                                         onchange={{action "updateCoi" true}}
                                         checked={{hasCoi}}
                                     >
-                                    <label class='coiRadioLabel' for="coiYes">{{t "submit.body.general.yes"}}</label>
+                                    <label class='coiRadioLabel' for="coiYes">{{t "submit.body.conflict_of_interest.yes"}}</label>
                                     <input
                                         type="radio"
                                         id="coiNo"
                                         name="coi"
                                         value="No"
                                         onchange={{action "updateCoi" false}}
-                                        checked={{if (and (not hasCoi) not-eq hasCoi undefined) true}}
+                                        checked={{if (and (not hasCoi) (not-eq hasCoi undefined)) true}}
                                     >
-                                    <label class='coiRadioLabel' for="coiNo">{{t "submit.body.general.no"}}</label>
+                                    <label class='coiRadioLabel' for="coiNo">{{t "submit.body.conflict_of_interest.no"}}</label>
                                 </div>
                                 <br>
                                 {{#if hasCoi}}
@@ -289,8 +289,8 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                         <div class="pull-right">
-                                            <button {{action 'discardCoi'}} class="btn btn-default" disabled={{unless coiStatementChanged true}} >{{t "global.discard"}}</button>
-                                            <button {{action 'saveCoi'}} class="btn btn-primary" disabled={{unless coiStatementValid true}} >{{t "submit.body.save_continue"}}</button>
+                                            <button {{action 'discardCoi'}} class="btn btn-default" disabled={{unless coiChanged true}} >{{t "global.discard"}}</button>
+                                            <button {{action 'saveCoi'}} class="btn btn-primary" disabled={{unless coiValid true}} >{{t "submit.body.save_continue"}}</button>
                                         </div>
                                     </div>
                                 </div>
