--- a/app/templates/submit.hbs
+++ b/app/templates/submit.hbs
@@ -439,7 +439,9 @@
                                         <p class="text-danger">{{unless savedAbstract (t "submit.body.submit.invalid.basics")}}</p>
                                         <p class="text-danger">{{unless savedSubjects (t "submit.body.submit.invalid.discipline")}}</p>
                                         <p class="text-danger">{{unless authorsValid (t "global.authors")}}</p>
-                                        <p class="text-danger">{{unless savedCoi (t "submit.body.conflict_of_interest.title")}}</p>
+                                        {{#if shouldShowCoiPanel}}
+                                            <p class="text-danger">{{unless savedCoi (t "submit.body.conflict_of_interest.title")}}</p>
+                                        {{/if}}
                                     </span>
                                 {{/if}}
                                 <button class="btn btn-success btn-md m-t-md pull-right" disabled={{showValidationErrors}} {{action 'clickSubmit'}}>
